
[tool.poetry]
name = "pms"
version = "0.1.0"
description = "Pubmed Search tool"
authors = ["Ruben Dörfel <ruben.dorfel@ki.se>"]
readme = "README.md"
packages = [{include = "pms"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^25.1.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
pms = "pms.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=pms --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
source = ["pms"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]